@@ -1,17 +1,9 @@
-//JAVA 21+
-//PREVIEW
-//COMPILE_OPTIONS --add-modules=jdk.incubator.vector
-//RUNTIME_OPTIONS --add-modules=jdk.incubator.vector -Djdk.incubator.vector.VECTOR_ACCESS_OOB_CHECK=0
-// Remember: Llama models use GPT2 vocabulary while non-Llama models use Llama vocabulary!
-
 package com.llama4j;
 
-import java.io.BufferedWriter;
-import java.io.FileWriter;
 import java.io.IOException;
-
 import java.io.PrintStream;
 import java.io.PrintWriter;
+
 import java.lang.foreign.Arena;
 import java.lang.invoke.MethodHandle;
 
@@ -25,7 +17,6 @@ import java.util.concurrent.TimeUnit;
 
 import java.util.function.IntConsumer;
 import java.util.function.LongConsumer;
-
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.LongStream;
@@ -39,18 +30,17 @@ import org.jsoup.nodes.Element;
 import org.jsoup.select.Elements;
 
 import com.llama4j.ffi.NativeLoader;
-
+/**
+ * Foreign Function Interface to Llama.cpp model runner to take full advantage to GPU enabled platforms.
+ * Most of the internal machinery of inference is abstracted away behind the Llama.cpp native runtime,
+ * despite a lot of utility function native handles being exposed for convenience purposes and for future research.
+ * We trade prompt strings and tokenized responses to and fro.<p>
+ * Remember: Llama models use GPT2 vocabulary while non-Llama models use Llama vocabulary!
+ * @author Jonathan Groff Copyright (C) NeoCoreTechs 2025
+ */
 public class Llama3 {
 	private static final Log log = LogFactory.getLog(Llama3.class);
-    // Batch-size used in prompt evaluation.
-    private static int BATCH_SIZE = Integer.getInteger("llama.BatchSize", 16);
     public final static boolean DEBUG = false;
-    public final static boolean DISPLAY_METADATA = true;
-
-    // metadata dump
-	public static BufferedWriter outputStream = null;
-	public static PrintWriter output = null;
-	public static FileWriter fileWriter = null;
 	// Arena
 	public static Arena autoArena = Arena.ofAuto();
 	public static Arena sharedArena = Arena.ofShared();
@@ -73,7 +63,12 @@ public class Llama3 {
 	public static MethodHandle cudaInit;
 	public static MethodHandle copyDeviceToHostMH;
 	public static MethodHandle runModelMH;
+	public static MethodHandle runModelTokenizeMH;
 	public static MethodHandle loadModelMH;
+	public static MethodHandle stringToTokenMH;
+	public static MethodHandle tokenToStringMH;
+	
+	static Options options = null;
 	
 	static {
 		NativeLoader.load();
@@ -118,36 +113,66 @@ public class Llama3 {
     	//}
     	//return null;
     }
-    
+	
     public static void main(String[] args) throws IOException {
         NativeLoader.loadMethods();
-        Options options = Options.parseOptions(args);
-        int maxTokens = 2048;
-        if(options.maxTokens() == -1)
-        	maxTokens = Options.DEFAULT_MAX_TOKENS;
-        else
-        	maxTokens = options.maxTokens();
+        options = Options.parseOptions(args);
 	    NativeLoader.loadMethods();
 		StringTensor s = new StringTensor(options.modelPath().toString());
-		try(Timer var = Timer.log("load model")) {
-			DeviceManager.loadModel(s, maxTokens);
-		}
-		StringTensor p = new StringTensor(options.prompt());
-		System.out.println("prompt:"+p);
-		IntTensor it = IntTensor.allocate(2048);
-		try(Timer var = Timer.log("run model")) {
-			int tokNum = DeviceManager.runModel(p, options.temperature(), it);
-			System.out.println("Tokens"+tokNum);
+		try(Timer _ = Timer.log("load model")) {
+			DeviceManager.loadModel(s, options.getMaxTokens());
 		}
 
         if (options.interactive()) {
-           
+            ChatFormat chatFormat = new ChatFormat();
+            List<ChatFormat.Message> dialog = new ArrayList<ChatFormat.Message>();
+            Scanner in = new Scanner(System.in);
+            loop: while (true) {
+            	//boolean storeDb = true;
+                System.out.print("> ");
+                System.out.flush();
+                String userText = in.nextLine();
+                switch (userText) {
+                    case "/quit":
+                    case "/exit": break loop;
+                }
+                ChatFormat.Message responseMessage = new ChatFormat.Message(ChatFormat.Role.USER, userText);
+                dialog.add(responseMessage);
+                //List<Integer> dialogTokens = chatFormat.encodeDialogPrompt(true, dialog);
+                //IntTensor it = new IntTensor(dialogTokens);
+                //StringTensor p = new StringTensor(new byte[dialogTokens.size()+2]);
+                //DeviceManager.tokenToString(it, dialogTokens.size(), p);
+                StringTensor p = chatFormat.extractDialogPrompt(true, dialog);
+        		System.out.println("prompt:"+p);
+        		int tokNum = 0;
+        		IntTensor retTokens = IntTensor.allocate(options.getMaxTokens());
+        		try(Timer _ = Timer.log("run model interactive")) {
+        			tokNum = DeviceManager.runModelTokenize(p, options.temperature(), options.minp(), options.topp(), retTokens);
+        			System.out.println("Returned Tokens="+tokNum);
+        		}
+        		if(tokNum == -1) {
+        			log.error("Context length exceeded, exiting");
+        			break;
+        		}
+        		StringTensor toks = new StringTensor(new byte[options.getMaxTokens()]);
+        		int strLen = DeviceManager.tokenToString(retTokens, tokNum, toks);
+        		System.out.println("returned prompt len="+strLen);
+        		System.out.println(toks.toString().substring(0,strLen));
+                responseMessage = new ChatFormat.Message(ChatFormat.Role.ASSISTANT, toks.toString().substring(0,strLen));
+                dialog.add(responseMessage);
+            }
+            in.close();
         } else {
-            
+        	StringTensor p = new StringTensor(options.prompt());
+    		System.out.println("prompt:"+p);
+    		IntTensor it = IntTensor.allocate(2048);
+    		try(Timer _ = Timer.log("run model")) {
+    			int tokNum = DeviceManager.runModel(p, options.temperature(), options.minp(), options.topp(), it);
+    			System.out.println("Tokens="+tokNum);
+    		}
         }
     }
 }
-
 
 interface Timer extends AutoCloseable {
     @Override
@@ -166,7 +191,6 @@ interface Timer extends AutoCloseable {
         };
     }
 }
-
 
 final class Parallel {
     public static void parallelFor(int startInclusive, int endExclusive, IntConsumer action) {
@@ -197,16 +221,13 @@ record Vocabulary(String[] tokens, float[] scores, Map<String, Integer> tokenToI
                         .collect(Collectors.toMap(i -> vocabulary[i], i -> i))
         );
     }
-
     public String get(int tokenIndex) {
         return tokens[tokenIndex];
     }
-
     public OptionalInt getIndex(String token) {
         Integer value = tokenToIndex.get(token);
         return value != null ? OptionalInt.of(value) : OptionalInt.empty();
     }
-
     public int size() {
         return tokens.length;
     }
@@ -218,12 +239,7 @@ record Vocabulary(String[] tokens, float[] scores, Map<String, Integer> tokenToI
     public float getScore(int tokenIndex) {
         return scores[tokenIndex];
     }
-    
     public boolean scoresNull() {
     	return scores == null;
     }
-
 }
-
-
-
